--- a/cmake/Boost_download.cmake.in
+++ b/cmake/Boost_download.cmake.in
@@ -3,42 +3,34 @@ include(ExternalProject)
 project(Boost)
 set(BOOST_VERSION 1.74.0)
 
-list(APPEND BOOST_LIBRARIES
-    "algorithm"
-    "assert"
-    "bind"
-    "config"
-    "container_hash"
-    "core"
-    "detail"
-    "dynamic_bitset"
-    "exception"
-    "function"
-    "functional"
-    "integer"
-    "io"
-    "iterator"
-    "move"
-    "mpl"
-    "numeric/conversion"
-    "preprocessor"
-    "range"
-    "smart_ptr"
-    "static_assert"
-    "test"
-    "type_index"
-    "type_traits"
-    "throw_exception"
-    "utility"
+list(APPEND BOOST_SUBMODULES
+    "libs/algorithm"
+    "libs/assert"
+    "libs/bind"
+    "libs/config"
+    "libs/container_hash"
+    "libs/core"
+    "libs/detail"
+    "libs/dynamic_bitset"
+    "libs/exception"
+    "libs/function"
+    "libs/functional"
+    "libs/integer"
+    "libs/io"
+    "libs/iterator"
+    "libs/move"
+    "libs/mpl"
+    "libs/numeric/conversion"
+    "libs/preprocessor"
+    "libs/range"
+    "libs/smart_ptr"
+    "libs/static_assert"
+    "libs/test"
+    "libs/type_index"
+    "libs/type_traits"
+    "libs/throw_exception"
+    "libs/utility"
 )
-if(${CMAKE_VERSION} VERSION_GREATER 3.11)
-  set(BOOST_SUBMODULES ${BOOST_LIBRARIES})
-    list(TRANSFORM BOOST_SUBMODULES PREPEND libs/)
-else()
-    foreach(boost_lib ${BOOST_LIBRARIES})
-        list(APPEND BOOST_SUBMODULES "libs/${boost_lib}")
-    endforeach(boost_lib)
-endif()
 
 ExternalProject_Add(${PROJECT_NAME}
     GIT_REPOSITORY      https://github.com/boostorg/boost.git
@@ -65,15 +57,15 @@ ExternalProject_Add_Step(${PROJECT_NAME} install_config
 )
 
 # Boost install broken for some CMake versions - do manually!
-foreach(boost_lib ${BOOST_LIBRARIES})
-  STRING(REGEX REPLACE "/" "_" clean_boost_lib ${boost_lib})
-  ExternalProject_Add_Step(${PROJECT_NAME} "${clean_boost_lib}"
+foreach(boost_module ${BOOST_SUBMODULES})
+  STRING(REGEX REPLACE "/" "_" clean_boost_module ${boost_module})
+  ExternalProject_Add_Step(${PROJECT_NAME} "${clean_boost_module}"
       DEPENDEES           install
       COMMAND             ${CMAKE_COMMAND} -E copy_directory
-                          <SOURCE_DIR>/libs/${boost_lib}/include
+                          <SOURCE_DIR>/${boost_module}/include
                           <INSTALL_DIR>/include
   )
-endforeach(boost_lib)
+endforeach(boost_module)
 
 configure_file(
   @CMAKE_SOURCE_DIR@/cmake/BoostConfigVersion.cmake.in
