--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: cpp
 
 before_install:
-    - sudo apt-get -y install cmake libboost-dev libboost-test-dev
+    - sudo apt-get -y install cmake
 
 dist: bionic
 sudo: required
