--- a/cmake/Boost_download.cmake.in
+++ b/cmake/Boost_download.cmake.in
@@ -4,33 +4,37 @@ project(Boost)
 set(BOOST_VERSION 1.74.0)
 
 list(APPEND BOOST_SUBMODULES
-    "libs/algorithm"
     "libs/assert"
-    "libs/bind"
     "libs/config"
     "libs/container_hash"
     "libs/core"
     "libs/detail"
     "libs/dynamic_bitset"
-    "libs/exception"
-    "libs/function"
     "libs/functional"
     "libs/integer"
-    "libs/io"
-    "libs/iterator"
     "libs/move"
-    "libs/mpl"
-    "libs/numeric/conversion"
     "libs/preprocessor"
-    "libs/range"
-    "libs/smart_ptr"
     "libs/static_assert"
-    "libs/test"
-    "libs/type_index"
     "libs/type_traits"
     "libs/throw_exception"
-    "libs/utility"
 )
+if(@YOMM2_ENABLE_TESTS@)
+    list(APPEND BOOST_SUBMODULES
+        "libs/algorithm"
+        "libs/bind"
+        "libs/exception"
+        "libs/function"
+        "libs/io"
+        "libs/iterator"
+        "libs/move"
+        "libs/numeric/conversion"
+        "libs/range"
+        "libs/smart_ptr"
+        "libs/test"
+        "libs/type_index"
+        "libs/utility"
+    )
+endif()
 
 ExternalProject_Add(${PROJECT_NAME}
     GIT_REPOSITORY      https://github.com/boostorg/boost.git
