FIX: Duplicate library download removed

--- a/cmake/Boost_download.cmake.in
+++ b/cmake/Boost_download.cmake.in
@@ -26,7 +26,7 @@ if(@YOMM2_ENABLE_TESTS@)
         "libs/function"
         "libs/io"
         "libs/iterator"
-        "libs/move"
+        "libs/mpl"
         "libs/numeric/conversion"
         "libs/range"
         "libs/smart_ptr"
