small changes to lab and manual call

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,6 +25,7 @@ add_test(NAME blackbox COMMAND blackbox)
 
 add_executable(lab lab.cpp)
 target_link_libraries(lab YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
+set_source_files_properties(lab.cpp PROPERTIES COMPILE_FLAGS "-save-temps")
 add_test(NAME lab COMMAND lab)
 
 add_executable(member_method member_method.cpp)
