--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,9 +23,12 @@ add_executable(blackbox blackbox.cpp)
 target_link_libraries(blackbox YOMM2::yomm2)
 add_test(NAME blackbox COMMAND blackbox)
 
+add_executable(manual_call manual_call.cpp)
+target_link_libraries(manual_call YOMM2::yomm2)
+add_test(NAME manual_call COMMAND manual_call)
+
 add_executable(lab lab.cpp)
 target_link_libraries(lab YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
-set_source_files_properties(lab.cpp PROPERTIES COMPILE_FLAGS "-save-temps")
 add_test(NAME lab COMMAND lab)
 
 add_executable(member_method member_method.cpp)
@@ -41,7 +44,6 @@ target_link_libraries(pointer_to_method YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
 add_test(NAME pointer_to_method COMMAND pointer_to_method)
 
 if(${YOMM2_ENABLE_BENCHMARKS})
-  set_source_files_properties(benchmarks_vfuncs.cpp PROPERTIES COMPILE_FLAGS "-save-temps")
-  add_executable(benchmarks benchmarks.cpp benchmarks_vfuncs.cpp )
+  add_executable(benchmarks benchmarks.cpp)
   target_link_libraries(benchmarks YOMM2::yomm2 benchmark::benchmark)
 endif()
