--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
           sudo apt install libboost-all-dev
       - name: Configure
         run: |
+          echo "#define YOMM2_BENCHMARK_HIERARCHIES 10" > tests/benchmarks_parameters.hpp
           mkdir cmake.bld
           cd cmake.bld
           cmake .. -DCMAKE_CXX_COMPILER=${{ matrix.compiler }} -DCMAKE_BUILD_TYPE=${{ matrix.config }} -DCMAKE_CXX_STANDARD=${{ matrix.standard }} -DYOMM2_ENABLE_TESTS=1 -DYOMM2_ENABLE_BENCHMARKS=1
@@ -68,6 +69,7 @@ jobs:
           sudo apt install libboost-all-dev
       - name: Configure
         run: |
+          echo "#define YOMM2_BENCHMARK_HIERARCHIES 10" > tests/benchmarks_parameters.hpp
           mkdir cmake.bld
           cd cmake.bld
           cmake .. -DCMAKE_CXX_COMPILER=${{ matrix.compiler }} -DCMAKE_BUILD_TYPE=${{ matrix.config }} -DCMAKE_CXX_STANDARD=${{ matrix.standard }} -DYOMM2_ENABLE_TESTS=1 -DYOMM2_ENABLE_BENCHMARKS=1
@@ -131,6 +133,7 @@ jobs:
       - uses: ilammy/msvc-dev-cmd@v1.4.1
       - name: Configure
         run: |
+          echo "#define YOMM2_BENCHMARK_HIERARCHIES 10" > tests/benchmarks_parameters.hpp
           mkdir cmake.bld
           cd cmake.bld
           cmake .. -G "NMake Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.config }} -DCMAKE_CXX_STANDARD=${{ matrix.standard }} -DYOMM2_ENABLE_TESTS=1
@@ -192,6 +195,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Configure
         run: |
+          echo "#define YOMM2_BENCHMARK_HIERARCHIES 10" > tests/benchmarks_parameters.hpp
           mkdir cmake.bld
           cd cmake.bld
           cmake .. -DCMAKE_BUILD_TYPE=${{ matrix.config }} -DCMAKE_CXX_STANDARD=${{ matrix.standard }} -DYOMM2_ENABLE_TESTS=1 -DYOMM2_ENABLE_BENCHMARKS=1
