--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,12 @@ jobs:
           sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
           sudo apt update
           sudo apt install g++-11
-        if: ${{ matrix.compiler == 'clang++-12' }}
+      - name: Install clang-11
+        if: ${{ matrix.compiler == 'clang++-11' }}
         run: |
           sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
           sudo apt update
-          sudo apt install clang-12
+          sudo apt install clang-11
       - name: Install Boost
         if: ${{ matrix.standard == 17 }}
         run: |
