headers only, switch to `update`

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -43,4 +43,5 @@ if(NOT MSVC AND NOT XCODE_VERSION)
     set_target_properties(dl_main PROPERTIES LINK_FLAGS "-Wl,-export-dynamic")
   endif()
   target_link_libraries(dl_main YOMM2::yomm2 dl)
+  target_link_libraries(dl_shared YOMM2::yomm2)
 endif()
