build(cmake): fix case where project is imported into existing CMake environement
When using something based in FetchContent like CPM (Cmake Package Manager), CMAKE_SOURCE_DIR points to the top-level of the user's project and not the root of yomm2. This results in find_or_download_package not being found. By specifying explicitly the relative path to the file, this can be avoided.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Find Boost dependency
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
-include(find_or_download_package)
+include(cmake/find_or_download_package.cmake)
 find_or_download_package(Boost INSTALL_WITH_YOMM)
 message(STATUS "Using Boost libraries from ${Boost_INCLUDE_DIRS}")
 
