--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,9 +7,9 @@ add_executable(chain chain.cpp)
 target_link_libraries(chain YOMM2::yomm2)
 add_test(NAME chain COMMAND chain)
 
-add_executable(core core.cpp)
-target_link_libraries(core YOMM2::yomm2)
-add_test(NAME core COMMAND core)
+add_executable(test_core test_core.cpp)
+target_link_libraries(test_core YOMM2::yomm2)
+add_test(NAME test_core COMMAND test_core)
 
 add_executable(templates templates.cpp)
 target_link_libraries(templates YOMM2::yomm2)
@@ -69,3 +69,10 @@ add_test(NAME test_virtual_ptr_all COMMAND test_virtual_ptr_all)
 add_executable(test_move test_move.cpp)
 target_link_libraries(test_move YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
 add_test(NAME test_move COMMAND test_move)
+
+add_executable(test_custom_rtti test_custom_rtti.cpp)
+target_link_libraries(test_custom_rtti YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
+if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+  set_target_properties(test_custom_rtti PROPERTIES COMPILE_FLAGS "-fno-rtti")
+endif()
+add_test(NAME test_custom_rtti COMMAND test_custom_rtti)
