--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,10 +5,9 @@ ARG UID
 ARG GROUP
 ARG GID
 
-ADD yomm2-init-image.sh /tmp/yomm2-init-image.sh
+COPY yomm2-init-image.sh /tmp/yomm2-init-image.sh
 
-RUN /tmp/yomm2-init-image.sh $USER $UID $GROUP $GID
-RUN rm /tmp/yomm2-init-image.sh
+RUN /tmp/yomm2-init-image.sh $USER $UID $GROUP $GID && rm /tmp/yomm2-init-image.sh
 
 USER $UID:$GID
 RUN echo 'export PS1="[\u@docker] \W $ "' >> /home/$USER/.bashrc
